--- a/backend/.env
+++ b/backend/.env
@@ -9,5 +9,5 @@ EMAIL_ADMIN=jogugil@gmail.com
 GMAIL_USER=jogugil@gmail.com
 GMAIL_PASS=ndme hnhi cazf wimb
 GIN_MODE=release
-MESSAGE_BROKER_TYPE=nats
 BROKER_URL=nats://localhost:4222
+GOCHAT_CONFIG_FILE=config/gochat.json
