--- a/backend/utils/.env
+++ b/backend/utils/.env
@@ -9,3 +9,5 @@ EMAIL_ADMIN=jogugil@gmail.com
 GMAIL_USER=jogugil@gmail.com
 GMAIL_PASS=ndme hnhi cazf wimb
 GIN_MODE=release
+BROKER_URL=nats://localhost:4222
+GOCHAT_CONFIG_FILE=./config/gochat.json
