--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=53cRe7k3y!zXy9*@1234Abc
 EXP_PORT=8081
 NAME_SERVER=0.0.0.0
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI=mongodb://root:example@localhost:27017
 NAME_MONGO=MongoGoChat
 EXP_SIZE_QMESSAGE=1024
 LOGFILE_GOCHAT=./logs/error_log.txt
