--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,4 @@ GMAIL_PASS=ndme hnhi cazf wimb
 GIN_MODE=release
 BROKER_URL=nats://localhost:4222
 GOCHAT_CONFIG_FILE=config/gochat.json
+ALLOWED_ORIGINS= http://localhost:5173
